--- a/src/App.css
+++ b/src/App.css
@@ -39,19 +39,67 @@
 
 /*Header Searchbar*/
 div.col.searchbar{
-  padding-top: 16px;
-  margin: auto;
-  width: auto;
-  max-width: 584px;;
-}
-
-div.searchList {
   background-color: white;
   color: black;
-  border-radius: 0.5rem;
+  width: 100%; 
+  border-radius: 5px;
+  box-shadow: 0px 1px 5px 3px rgba(0, 0, 0, 0.12);
+  position: relative;
+  max-width: 45rem;
+  margin: auto;
 }
 
-div.searchList ul {
+div.col.searchbar input:focus{
+color: unset;
+background-color: unset;
+border-color: unset;
+box-shadow: 0 0 0 0.25rem rgb(255 255 255 / 0%);
+}
+.searchbar div.icon{
+  font-size: 25px;
+  top: 0;
+  right: 0;
+  position: absolute;
+  text-align: center;
+  color: gray;
+  padding-right: 8px;
+}
+
+div.searchList{
+
+  max-height: 280px;
+  overflow-y: auto;
+  width: 100%;
+
+}
+
+div.searchList li{
+  text-align: left;
+  list-style: none;
+  padding: 8px 12px;
+  width: 100%;
+  cursor: default;
+  border-radius: 3px;
+}
+
+div.searchList li:hover{
+  background: #efefef;
+}
+/*
+ul.searchList  {
   list-style: none;
   padding-left: unset;
+  background-color: white;
+  color: black;
+  position: absolute;
+  border-radius: 2px;
+  width:100%;
+  max-width: 560px;
+  text-align: left;
+  text-indent: 10px;
 }
+
+li.searchLi{
+  margin: 5px;
+}
+*/
